--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "/packages/mongodb-with-starlette"]
+  path = packages/mongodb-with-starlette
+  url = https://github.com/poligonosapp/mongodb-with-starlette
+
 [submodule "/packages/poligonosapp_with_django_folium"]
   path = packages/realm-graphql
   url = https://github.com/poligonosapp/realm-graphql
